# Blizzards

./: IMPLEMENTATION_PLAN.md  PHASE_3_COMPLETE.md  PROJECT_REVIEW.md
blizzard-wasm/: .gitignore  Cargo.toml  README.md  test.html
blizzard-wasm-spec/: CONTENTS.md  SPEC.md
blizzard-wasm-spec/docs/: ARIMA_ALGORITHM.md  SCENARIO_EXAMPLES.md  UI_MOCKUPS.md
blizzard-wasm-spec/reference/: Arima.cs  CLAUDE.md  Program.cs  ValidateArimax.cs  blizzard.html
blizzard-wasm-spec/src/: lib.rs
blizzard-wasm/src/: arima.rs  easter.rs
blizzard-wasm/web/: README.md  blizzard-integrated.html  blizzard_wasm.d.ts  blizzard_wasm.js  blizzard_wasm_bg.wasm  indexeddb-cache.js  scenario-builder.css  scenario-builder.html  scenario-builder.js  scenario-model.js
